--- a/TrabFPI/Base.lproj/Main.storyboard
+++ b/TrabFPI/Base.lproj/Main.storyboard
@@ -33,25 +33,47 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ap-OD-0Ov">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
+                                <rect key="frame" x="144.5" y="318" width="86" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="1gi-ld-4pP"/>
-                                    <constraint firstAttribute="width" constant="46" id="UrH-de-LKb"/>
+                                    <constraint firstAttribute="width" constant="86" id="UrH-de-LKb"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Flip Vertical"/>
                                 <connections>
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3L-gt-h3E"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqu-8p-zD9">
+                                <rect key="frame" x="144.5" y="348" width="86" height="30"/>
+                                <state key="normal" title="Horzontal"/>
+                                <connections>
+                                    <action selector="flipHorizontalButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mjr-fA-7ib"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="art-ki-ZPN">
+                                <rect key="frame" x="230.5" y="318" width="86" height="30"/>
+                                <state key="normal" title="Gray"/>
+                                <connections>
+                                    <action selector="grayScaleButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HGR-In-tC9"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="bottom" id="0J0-Tx-PwH"/>
                             <constraint firstItem="0Ap-OD-0Ov" firstAttribute="top" secondItem="LXq-a2-vEc" secondAttribute="bottom" constant="50" id="3bM-rb-sad"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="height" secondItem="0Ap-OD-0Ov" secondAttribute="height" id="5Es-u1-dyz"/>
                             <constraint firstItem="y1d-Qr-QXb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="80p-CO-Xnw"/>
                             <constraint firstItem="LXq-a2-vEc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BFG-uZ-ghU"/>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="width" secondItem="0Ap-OD-0Ov" secondAttribute="width" id="KJN-Ny-W5e"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="leading" secondItem="0Ap-OD-0Ov" secondAttribute="trailing" id="OnV-Ju-MsD"/>
                             <constraint firstItem="y1d-Qr-QXb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T3y-M5-2i1"/>
                             <constraint firstItem="LXq-a2-vEc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hdm-Sp-hy3"/>
                             <constraint firstItem="0Ap-OD-0Ov" firstAttribute="centerX" secondItem="LXq-a2-vEc" secondAttribute="centerX" id="jUN-92-R3M"/>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ojg-vJ-jSl"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="top" id="ozA-WC-CLL"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="width" secondItem="0Ap-OD-0Ov" secondAttribute="width" id="tad-A4-C9L"/>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="height" secondItem="0Ap-OD-0Ov" secondAttribute="height" id="wdh-Yl-Ubm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
