save button and now dealing with jpg

--- a/TrabFPI/Base.lproj/Main.storyboard
+++ b/TrabFPI/Base.lproj/Main.storyboard
@@ -57,6 +57,21 @@
                                     <action selector="grayScaleButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HGR-In-tC9"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-dZ-UHI">
+                                <rect key="frame" x="16" y="318" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oy7-gF-F3n">
+                                <rect key="frame" x="250" y="348" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="saveButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MrD-Bh-a6p"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -80,6 +95,7 @@
                     <connections>
                         <outlet property="imageVIew" destination="LXq-a2-vEc" id="Vv2-ms-Qiz"/>
                         <outlet property="outImageView" destination="y1d-Qr-QXb" id="rE4-Vv-9FR"/>
+                        <outlet property="textField" destination="Wcx-dZ-UHI" id="v9u-mo-3Ug"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
