--- a/TrabFPI/Base.lproj/Main.storyboard
+++ b/TrabFPI/Base.lproj/Main.storyboard
@@ -19,75 +19,86 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LXq-a2-vEc">
-                                <rect key="frame" x="93.5" y="20" width="188" height="248"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="248" id="g1o-Kh-6BX"/>
-                                    <constraint firstAttribute="width" constant="188" id="tbJ-D2-Ci3"/>
+                                    <constraint firstAttribute="height" constant="240" id="g1o-Kh-6BX"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y1d-Qr-QXb">
-                                <rect key="frame" x="93.5" y="419" width="188" height="248"/>
+                                <rect key="frame" x="0.0" y="427" width="375" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="188" id="0YO-vf-HiQ"/>
-                                    <constraint firstAttribute="height" constant="248" id="GJ2-Gp-B2J"/>
+                                    <constraint firstAttribute="height" constant="240" id="GJ2-Gp-B2J"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ap-OD-0Ov">
-                                <rect key="frame" x="144.5" y="318" width="86" height="30"/>
+                                <rect key="frame" x="20" y="310" width="81" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="1gi-ld-4pP"/>
-                                    <constraint firstAttribute="width" constant="86" id="UrH-de-LKb"/>
                                 </constraints>
                                 <state key="normal" title="Flip Vertical"/>
                                 <connections>
-                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3L-gt-h3E"/>
+                                    <action selector="flipVerticalButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3L-gt-h3E"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqu-8p-zD9">
-                                <rect key="frame" x="144.5" y="348" width="86" height="30"/>
-                                <state key="normal" title="Horzontal"/>
+                                <rect key="frame" x="260" y="310" width="95" height="30"/>
+                                <state key="normal" title="Flip Horzontal"/>
                                 <connections>
                                     <action selector="flipHorizontalButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mjr-fA-7ib"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="art-ki-ZPN">
-                                <rect key="frame" x="230.5" y="318" width="86" height="30"/>
-                                <state key="normal" title="Gray"/>
-                                <connections>
-                                    <action selector="grayScaleButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HGR-In-tC9"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-dZ-UHI">
-                                <rect key="frame" x="16" y="318" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type shades number and press return" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-dZ-UHI">
+                                <rect key="frame" x="20" y="265" width="335" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oy7-gF-F3n">
-                                <rect key="frame" x="250" y="348" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oy7-gF-F3n">
+                                <rect key="frame" x="20" y="350" width="34" height="30"/>
+                                <state key="normal" title="Save"/>
                                 <connections>
                                     <action selector="saveButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MrD-Bh-a6p"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caf-9I-cbm">
+                                <rect key="frame" x="319" y="350" width="36" height="30"/>
+                                <state key="normal" title="Copy"/>
+                                <connections>
+                                    <action selector="copyButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WsM-fK-cIt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="art-ki-ZPN">
+                                <rect key="frame" x="150" y="350" width="74" height="30"/>
+                                <state key="normal" title="Gray Scale"/>
+                                <connections>
+                                    <action selector="grayScaleButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HGR-In-tC9"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="bottom" id="0J0-Tx-PwH"/>
-                            <constraint firstItem="0Ap-OD-0Ov" firstAttribute="top" secondItem="LXq-a2-vEc" secondAttribute="bottom" constant="50" id="3bM-rb-sad"/>
-                            <constraint firstItem="art-ki-ZPN" firstAttribute="height" secondItem="0Ap-OD-0Ov" secondAttribute="height" id="5Es-u1-dyz"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="3Jy-rm-pZF"/>
                             <constraint firstItem="y1d-Qr-QXb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="80p-CO-Xnw"/>
-                            <constraint firstItem="LXq-a2-vEc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BFG-uZ-ghU"/>
-                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="width" secondItem="0Ap-OD-0Ov" secondAttribute="width" id="KJN-Ny-W5e"/>
-                            <constraint firstItem="art-ki-ZPN" firstAttribute="leading" secondItem="0Ap-OD-0Ov" secondAttribute="trailing" id="OnV-Ju-MsD"/>
+                            <constraint firstItem="Caf-9I-cbm" firstAttribute="bottom" secondItem="oy7-gF-F3n" secondAttribute="bottom" id="AUT-yJ-01o"/>
+                            <constraint firstItem="0Ap-OD-0Ov" firstAttribute="leading" secondItem="Wcx-dZ-UHI" secondAttribute="leading" id="BV5-Mu-KqR"/>
+                            <constraint firstItem="Wcx-dZ-UHI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="IH9-Jc-5Bx"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="bottom" secondItem="oy7-gF-F3n" secondAttribute="bottom" id="KIN-Yo-Nk9"/>
+                            <constraint firstItem="art-ki-ZPN" firstAttribute="top" secondItem="oy7-gF-F3n" secondAttribute="top" id="NjQ-dz-ikD"/>
+                            <constraint firstItem="Caf-9I-cbm" firstAttribute="top" secondItem="oy7-gF-F3n" secondAttribute="top" id="OkS-V2-ECl"/>
+                            <constraint firstItem="Wcx-dZ-UHI" firstAttribute="top" secondItem="LXq-a2-vEc" secondAttribute="bottom" constant="5" id="Q7V-6J-HIo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LXq-a2-vEc" secondAttribute="trailing" id="S5V-dd-gVa"/>
                             <constraint firstItem="y1d-Qr-QXb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T3y-M5-2i1"/>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="trailing" secondItem="Wcx-dZ-UHI" secondAttribute="trailing" id="URG-Qq-2eA"/>
+                            <constraint firstItem="Caf-9I-cbm" firstAttribute="trailing" secondItem="Xqu-8p-zD9" secondAttribute="trailing" id="X4M-1h-obI"/>
+                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="top" id="ZSW-Ov-px2"/>
+                            <constraint firstItem="oy7-gF-F3n" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="bottom" constant="10" id="a78-Oc-2Wa"/>
                             <constraint firstItem="LXq-a2-vEc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hdm-Sp-hy3"/>
-                            <constraint firstItem="0Ap-OD-0Ov" firstAttribute="centerX" secondItem="LXq-a2-vEc" secondAttribute="centerX" id="jUN-92-R3M"/>
-                            <constraint firstItem="Xqu-8p-zD9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ojg-vJ-jSl"/>
-                            <constraint firstItem="art-ki-ZPN" firstAttribute="top" secondItem="0Ap-OD-0Ov" secondAttribute="top" id="ozA-WC-CLL"/>
-                            <constraint firstItem="art-ki-ZPN" firstAttribute="width" secondItem="0Ap-OD-0Ov" secondAttribute="width" id="tad-A4-C9L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wcx-dZ-UHI" secondAttribute="trailing" constant="20" id="l6H-CJ-67D"/>
+                            <constraint firstItem="y1d-Qr-QXb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="quB-Qy-jOK"/>
+                            <constraint firstItem="oy7-gF-F3n" firstAttribute="leading" secondItem="0Ap-OD-0Ov" secondAttribute="leading" id="rnU-db-KU1"/>
+                            <constraint firstItem="LXq-a2-vEc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tbO-MX-X1m"/>
+                            <constraint firstItem="0Ap-OD-0Ov" firstAttribute="top" secondItem="Wcx-dZ-UHI" secondAttribute="bottom" constant="15" id="vkX-o2-33e"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y1d-Qr-QXb" secondAttribute="trailing" id="wRf-VV-oW9"/>
                             <constraint firstItem="Xqu-8p-zD9" firstAttribute="height" secondItem="0Ap-OD-0Ov" secondAttribute="height" id="wdh-Yl-Ubm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
